# parallel-web-crawler

./: .gitignore  CMakeLists.txt  Makefile  README.md  README.windows.md  test_app.cpp  windows_setup.bat
data/: results.csv  results_headings.csv  results_images.csv  results_links.csv  simple_urls.txt  url.txt  urls.txt
include/: crawler.hpp  parser.hpp  thread_manager.hpp  utils.hpp
src/: crawler.cpp  main.cpp  parser.cpp  thread_manager.cpp  utils.cpp
